[package]
name = "opc"
version = "0.1.0"
authors = ["Sasaki Kazuhiro <sasaki.kazuhiro@classmethod.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = {version = "1.0.126", features=["derive"]}
dirs = "3.0.2"
clap = "2.33.3"
security-framework = "2.3.1"